k8s/menu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menu-service
  template:
    metadata:
      labels:
        app: menu-service
    spec:
      serviceAccountName: restaurant-app-sa
      containers:
        - name: menu-service
          image: nima0d80/menu-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
