k8s/menu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: menu-service
spec:
  type: NodePort
  selector:
    app: menu-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
