k8s/restaurant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: menu-service
                port:
                  number: 8000

          - path: /menu
            pathType: Prefix
            backend:
              service:
                name: menu-service
                port:
                  number: 8000

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8001

          - path: /menu-from-service
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8001
